# inputosm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  autoformat.sh  test1
.github/workflows/: build.yaml  ci.yml
cmake/: inputosm-config.cmake.in  inputosm.pc.in  version.h.in
conan/: CMakeLists.txt  conanfile.txt
include/inputosm/: inputosm.h  slimosm.h  span.h
src/: inputosm.cpp  inputosmlog.cpp  inputosmlog.h  inputosmpbf.cpp  inputosmxml.cpp  slimosm.cpp  slimosmpbf.cpp  slimosmxml.cpp  timeutil.cpp  timeutil.h
test/integration/: CMakeLists.txt  count_all.cpp  counter.h  custom_log.cpp  export_csv.cpp  export_db.cpp  extract_ferries.cpp  inputosm_count_all.cpp  inputosm_count_all2.cpp  inputosm_extract_ferries.cpp  inputosm_integration_test.cpp  lat_stat.cpp  statistics.cpp
test/unit/: CMakeLists.txt  read_osc_test.cpp  read_osm_test.cpp  test_utils.h  thread_config_test.cpp
test/unit/data/: sample.osc  sample.osm
